--- a/css/style.css
+++ b/css/style.css
@@ -47,24 +47,24 @@ html, body {
 }
 
 .text-box {
-    box-shadow: 0 2px 10px #e1e1e1;
-    background-color: #fff;
     margin-top: 50px;
     margin-bottom: 50px;
     padding-left: 25px;
     padding-right: 25px;
 }
 
+.landing{
+  background-image:url('../img/homeBanner.jpg');
+  /* width: 100%;
+  height: auto; */
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
+
   /*----------------- description section ------------------*/
-
-  .logo {
-    padding-top: 75px;
-    padding-bottom: 75px;
-  }
-
-  .logo-main {
-    max-width: 300px;
-  }
 
   .description {
     padding-top: 25px;
@@ -111,7 +111,7 @@ html, body {
 
   /*----------------- apply section ------------------*/
 
-  .apply {
+  .center {
     text-align: center;
   }
 
